--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/Maps/LevelExemplo.LevelExemplo
+GameDefaultMap=/Game/Maps/LevelExemplo.LevelExemplo
 GlobalDefaultGameMode="/Script/JogoExemplo.JogoExemploGameMode"
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
@@ -9,5 +9,3 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
-
